--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
   },
   "devDependencies": {
     "eslint": "^3.17.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jest": "^19.0.1"
+    "eslint-plugin-import": "^2.2.0"
   },
   "peerDependencies": {
     "eslint": "^3.17.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jest": "^19.0.1"
+    "eslint-plugin-import": "^2.2.0"
   }
 }
