--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "eslint-config-brainbits",
+  "name": "eslint-config-brainbits-jest",
   "version": "0.1.0",
-  "description": "Global eslint rules for Brainbits GmbH",
+  "description": "Default eslint config for project using jest at Brainbits GmbH",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
-  },
   "repository": "brainbits/eslint-config-brainbits",
   "keywords": [
     "eslint",
@@ -14,14 +11,14 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "eslint-config-airbnb-base": "^11.1.1"
+    "eslint-config-brainbits": "^0.1.0"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-jest": "^19.0.1"
   },
   "peerDependencies": {
     "eslint": "^3.17.1",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-jest": "^19.0.1"
   }
 }
