--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,19 +14,20 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "eslint-config-brainbits": "^0.1.0"
+    "eslint-config-brainbits": "^0.2.0",
+    "eslint-plugin-react": "^7.0.1"
   },
   "devDependencies": {
-    "eslint": "^3.17.1",
+    "eslint": "^3.19.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
-    "react": "^15.4.2"
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.1",
+    "react": "^15.5.4"
   },
   "peerDependencies": {
-    "eslint": "^3.17.1",
+    "eslint": "^3.19.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0"
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.1"
   }
 }
