--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,6 +14,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "eslint-config-airbnb": "^15.0.1",
     "eslint-config-brainbits": "^0.3.0",
     "eslint-plugin-react": "^7.0.1"
   },
