--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "lerna": "^2.0.0-rc.4"
+    "lerna": "^2.7.0"
   },
   "name": "eslint-config-brainbits-monorepo",
   "version": "0.1.0",
