Add npm scripts for lerna
Lerna bootstrap is now executetd directly after `npm install` in root folder.
Also added a shortcut for `lerna publish`, so it can be executed by npm

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "postinstall": "lerna bootstrap",
+    "publish": "lerna publish"
+  },
   "devDependencies": {
     "lerna": "^2.7.0"
   },
