--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -14,14 +14,16 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "eslint-config-airbnb-base": "^12.1.0"
+    "eslint-config-airbnb-base": "^13.1.0"
   },
   "devDependencies": {
-    "eslint": "^4.15.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint": "^5.8.0",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-import": "^2.14.0"
   },
   "peerDependencies": {
-    "eslint": "^4.15.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint": "^5.8.0",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
