Add missing peer dependencies
We had to learn that peer dependencies didn't get hoistet. So we add
them to our packages again.

--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -12,5 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "eslint-config-brainbits": "^2.0.0"
+  },
+  "peerDependencies": {
+    "eslint": "^5.16.0 || ^6.1.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
