--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -18,5 +18,9 @@
     "@typescript-eslint/parser": "^2.19.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-brainbits": "^2.0.0"
+  },
+  "peerDependencies": {
+    "eslint": "^5.16.0 || ^6.1.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
