--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -15,5 +15,9 @@
   "license": "MIT",
   "dependencies": {
     "eslint-config-airbnb-base": "^14.0.0"
+  },
+  "peerDependencies": {
+    "eslint": "^5.16.0 || ^6.1.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
