--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -16,5 +16,12 @@
   "dependencies": {
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-brainbits": "^2.0.0"
+  },
+  "peerDependencies": {
+    "eslint": "^5.16.0 || ^6.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
