--- a/packages/typescript-react/package.json
+++ b/packages/typescript-react/package.json
@@ -10,11 +10,19 @@
   "keywords": [
     "eslint",
     "lint",
-    "config"
+    "config",
+    "typescript"
   ],
   "license": "MIT",
   "dependencies": {
     "eslint-config-brainbits-react": "^2.0.0",
     "eslint-config-brainbits-typescript": "^2.0.0"
+  },
+  "peerDependencies": {
+    "eslint": "^5.16.0 || ^6.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
