Add recommended typescript rules

--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -16,6 +16,10 @@
   "dependencies": {
     "eslint-config-airbnb-base": "^14.0.0"
   },
+  "devDependencies": {
+      "eslint": "^5.16.0 || ^6.1.0",
+      "eslint-plugin-import": "^2.18.2"
+  },
   "peerDependencies": {
     "eslint": "^5.16.0 || ^6.1.0",
     "eslint-plugin-import": "^2.18.2"
