--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -19,8 +19,16 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-brainbits": "^2.0.1"
   },
-  "peerDependencies": {
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
     "eslint": "^5.16.0 || ^6.1.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "typescript": "^3.8.2"
+  },
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "eslint": "^5.16.0 || ^6.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "typescript": "^3.8.2"
   }
 }
