--- a/packages/typescript-react/package.json
+++ b/packages/typescript-react/package.json
@@ -19,6 +19,8 @@
     "eslint-config-brainbits-typescript": "^2.0.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^5.16.0 || ^6.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -27,6 +29,8 @@
     "typescript": "^3.8.2"
   },
   "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^5.16.0 || ^6.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
