--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -27,6 +27,7 @@
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^5.16.0 || ^6.1.0",
     "eslint-plugin-import": "^2.18.2",
     "typescript": "^3.8.2"
