--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-brainbits",
-  "version": "2.1.0-rc.0",
+  "version": "2.1.0",
   "description": "Global eslint rules for Brainbits GmbH",
   "main": "index.js",
   "scripts": {
