--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -1,8 +1,8 @@
 name: Node.js Package
 
-on:
-  release:
-    types: [created]
+push:
+  branches:
+    - master
 
 jobs:
   build:
@@ -15,6 +15,18 @@ jobs:
       - run: npm ci
       - run: npm test
 
+  release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+      - run: npx lerna version --conventional-commits --yes
+
+
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
@@ -25,6 +37,6 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npx lerna exec npm publish
+      - run: npx lerna publish from-package
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
