chore: disable `npm ci` for lerna bootstrap
Our packages don't contain package-lock files. So `npm ci` will
fail.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "postinstall": "lerna bootstrap",
+    "postinstall": "lerna bootstrap --no-ci",
     "publish": "lerna publish"
   },
   "devDependencies": {
