chore: omit package-lock when bootstrapping

--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,10 @@
 {
   "lerna": "2.7.0",
+  "command": {
+    "bootstrap": {
+      "npmClientArgs": ["--no-package-lock"]
+    }
+  },
   "packages": [
     "packages/*"
   ],
