--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -26,22 +26,9 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: |
-          git config --global user.name 'Brainbits Bot'
-          git config --global user.email 'info@brainbits.net'
-          npx lerna version --conventional-commits --yes
-
-
-  publish-npm:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-          registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npx lerna publish from-package
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+      - env:
+            NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+        run: |
+            git config --global user.name 'Brainbits Bot'
+            git config --global user.email 'info@brainbits.net'
+            npx lerna publish --conventional-commits --yes
