--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -18,6 +18,7 @@ jobs:
 
   release:
     needs: test
+    if: github.repository == 'brainbits/eslint-config-brainbits'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
