--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -17,12 +17,12 @@
     "eslint-config-airbnb-base": "^14.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0 || ^6.1.0",
+    "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^4.2.1"
   },
   "peerDependencies": {
-    "eslint": "^5.16.0 || ^6.1.0",
+    "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^4.2.1"
   }
