--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -14,11 +14,11 @@
     "eslint-config-brainbits": "^2.3.3"
   },
   "devDependencies": {
-    "eslint": "^5.16.0 || ^6.1.0",
+    "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
     "eslint-plugin-import": "^2.18.2"
   },
   "peerDependencies": {
-    "eslint": "^5.16.0 || ^6.1.0",
+    "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
     "eslint-plugin-import": "^2.18.2"
   }
 }
