--- a/packages/typescript-react/package.json
+++ b/packages/typescript-react/package.json
@@ -19,23 +19,23 @@
     "eslint-config-brainbits-typescript": "^2.3.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.19.2",
-    "eslint": "^5.16.0 || ^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "typescript": "^3.8.2"
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "typescript": "^3.8.2 || ^4.0.0"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.19.2",
-    "eslint": "^5.16.0 || ^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "typescript": "^3.8.2"
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "typescript": "^3.8.2 || ^4.0.0"
   }
 }
