--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -18,11 +18,13 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^4.2.1"
   },
   "peerDependencies": {
     "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^4.2.1"
   }
