--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -15,10 +15,12 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2"
   },
   "peerDependencies": {
     "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2"
   }
 }
