--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
@@ -26,6 +27,7 @@
   },
   "peerDependencies": {
     "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
