--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -16,11 +16,13 @@
   "devDependencies": {
     "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.8.2"
   },
   "peerDependencies": {
     "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.8.2"
   }
 }
