feat: Switch to npm7 workspaces
npm offer since version 7 its own workspaces system. The benefit of its
implementation is that it respects the new peer dependency algorithm which
was released with npm 7.4. This will enable us to get rid of the `devDependencies`
workaround.

BREAKING-CHANGE: You will need an up to date npm version

--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
   "private": true,
   "repository": "brainbits/eslint-config-brainbits",
   "author": "Michael van Engelshoven <michael@van-engelshoven.de>",
-  "license": "MIT"
+  "license": "MIT",
+  "workspaces": [
+    "packages/base",
+    "packages/jest",
+    "packages/react",
+    "packages/typescript",
+    "packages/typescript-react"
+  ]
 }
