--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
   "lerna": "2.7.0",
+  "useWorkspaces": true,
   "command": {
     "bootstrap": {
       "npmClientArgs": [
@@ -7,8 +8,5 @@
       ]
     }
   },
-  "packages": [
-    "packages/*"
-  ],
   "version": "3.0.9"
 }
