feat: Add eslint for checking configs
Adding eslint and our own `base` package as dev dependency to check the code
stlye of our configs.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-    "extends": "./packages/base/index.js"
+    "extends": "./packages/base/index.js",
+    "rules": {
+        "import/no-extraneous-dependencies": "off"
+    }
 }
