--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "scripts": {
     "postinstall": "lerna bootstrap --no-ci",
-    "publish": "lerna publish"
+    "publish": "lerna publish",
+    "lint": "eslint packages/"
   },
   "devDependencies": {
+    "eslint": "^8.12.0",
+    "eslint-config-brainbits": "./packages/base",
     "lerna": "^4.0.0"
   },
   "name": "eslint-config-brainbits-monorepo",
