chore: Move test file out of package
Adding a separate folder `tests/` where we can add test files for checking
our configs.

**Tests are still work in progress and currently not functional**

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "packages/jest",
     "packages/react",
     "packages/typescript",
-    "packages/typescript-react"
+    "packages/typescript-react",
+    "tests/react"
   ]
 }
