--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -14,12 +14,12 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "eslint-config-airbnb-base": "^14.0.0"
+    "eslint-config-airbnb-base": "^15.0.0"
   },
   "peerDependencies": {
-    "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0",
-    "eslint-plugin-babel": "^5.3.0",
+    "eslint": "^5.16.0 || ^6.1.0 || ^7.0.0 || ^8.0.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-promise": "^5.1.0"
+    "eslint-plugin-promise": "^6.0.0"
   }
 }
