--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,8 +14,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-brainbits": "^3.0.9"
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-brainbits": "3.0.9"
   },
   "peerDependencies": {
     "eslint-plugin-jsx-a11y": "^6.2.3",
