--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -15,11 +15,11 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "eslint-config-brainbits": "^3.0.9"
+    "eslint-config-brainbits": "3.0.9"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "typescript": "^3.8.2 || ^4.0.0"
   }
 }
