--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-brainbits",
-  "version": "3.0.9",
+  "version": "4.0.0-beta.3+9d72dcf",
   "description": "Global eslint rules for Brainbits GmbH",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,6 @@
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^6.0.0"
-  }
+  },
+  "gitHead": "9d72dcf4aa03981901ce34b64ddea7e4ce56d55c"
 }
