--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-brainbits-react",
-  "version": "3.0.9",
+  "version": "4.0.0-beta.3+9d72dcf",
   "description": "Global react eslint rules for Brainbits GmbH",
   "main": "index.js",
   "scripts": {
@@ -15,11 +15,12 @@
   "license": "MIT",
   "dependencies": {
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-brainbits": "3.0.9"
+    "eslint-config-brainbits": "^4.0.0-beta.3+9d72dcf"
   },
   "peerDependencies": {
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^4.1.0"
-  }
+  },
+  "gitHead": "9d72dcf4aa03981901ce34b64ddea7e4ce56d55c"
 }
