--- a/packages/typescript-react/package.json
+++ b/packages/typescript-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-brainbits-typescript-react",
-  "version": "3.0.9",
+  "version": "4.0.0-beta.3+9d72dcf",
   "description": "Global typescript react eslint rules for Brainbits GmbH",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "eslint-config-brainbits-react": "3.0.9",
-    "eslint-config-brainbits-typescript": "3.0.9"
-  }
+    "eslint-config-brainbits-react": "^4.0.0-beta.3+9d72dcf",
+    "eslint-config-brainbits-typescript": "^4.0.0-beta.3+9d72dcf"
+  },
+  "gitHead": "9d72dcf4aa03981901ce34b64ddea7e4ce56d55c"
 }
