--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -18,9 +18,9 @@
     "eslint-config-brainbits": "^4.0.0-beta.3+9d72dcf"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "typescript": "^3.8.2 || ^4.0.0"
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "typescript": ">=3.3.1 <4.8.0"
   },
   "gitHead": "9d72dcf4aa03981901ce34b64ddea7e4ce56d55c"
 }
