--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -6,24 +6,24 @@ on:
       - master
 
 jobs:
-  test:
-    name: Run unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
-      - name: Setup NodeJS
-        uses: actions/setup-node@v1
-        with:
-          node-version: 18
-      - name: Install node dependencies
-        run: npm ci
-      - name: Run tests
-        run: npm test
+  # test:
+  #   name: Run unit tests
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out repository
+  #       uses: actions/checkout@v2
+  #     - name: Setup NodeJS
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 18
+  #     - name: Install node dependencies
+  #       run: npm ci
+  #     - name: Run tests
+  #       run: npm test
 
   release:
     name: Create release and publish
-    needs: test
+    # needs: test
     if: github.repository == 'brainbits/eslint-config-brainbits'
     runs-on: ubuntu-latest
     steps:
